update java GC